package com.accenture.challenge.dto;

public record CostoDto(Integer origen, Integer destino, int costo) {}
