package com.accenture.challenge.dto;

import java.util.List;

public record ResultadoMejorCaminoDto(int costoTotal, List<Integer> camino) {}
