classDiagram
    %% Entidades principales
    class PuntoVentaDto {
        -Integer id
        -String nombre
    }

    class CostoDto {
        -Integer origen
        -Integer destino
        -int costo
    }

    class ResultadoMejorCaminoDto {
        -BigDecimal importe
        -List~Integer~ camino
    }

    class Acreditacion {
        -int costoTotal
        -Integer puntoVentaId
        -String puntoVentaNombre
        -Timestamp fechaRecepcion
    }

    %% Servicios
    class CostoService {
        +init(): void
		+cargar(int a, int b, int costo): void
		+remover(int a, int b): void
		+vecinos(int id): Map<Integer, Integer>
		+buscarMejorCamino(int origen, int destino): ResultadoMejorCaminoDto
    }

    class PuntoVentaService {
        +init(): void
		+getAll(): List<PuntoVentaDto>
		+add(PuntoVentaDto puntoVenta): PuntoVentaDto
		+update(PuntoVentaDto puntoVenta): PuntoVentaDto
		+delete(int id): PuntoVentaDto
		+get(int id): PuntoVentaDto
		+exists(int id): boolean
    }

    class AcreditacionService {
        +cargarAcreditacion(AcreditacionDTO acreditacionDto): Acreditacion
		+consultaAcreditacion(Long id): Acreditacion
		+consultaTodasAcreditaciones(): List<Acreditacion>
    }

    %% Controladores
    class CostoController
    class PuntoVentaController
    class AcreditacionController

    %% Relaciones
    CostoDto --> PuntoVentaDto

    CostoController --> CostoService
    PuntoVentaController --> PuntoVentaService
    AcreditacionController --> AcreditacionService
